# SNAP-Sigmoidal-Neuronal-Adaptive-Plasticity

./: .gitignore  README.md  pyproject.toml  run_all_experiments.sh
base_scripts/: train_forget.py
experiements/: forget_softhebb_experiement.py
experiments/: forget_softhebb_experiment.py
interfaces/: experiment.py  layer.py  network.py
layers/: input_layer.py
layers/base/: data_setup_layer.py
models/MLP/: baseline_mlp.py  hebbian_layer.py  soft_hebbian_layer.py
models/utils/: helper_modules.py  hyperparams.py  learning.py
scripts/: running_forget_experiements.py
tests/sequential_tests/: seq_forget_test.py
tests/sequential_tests/base_scripts_seq/: seq_train_forget.py
utils/: utils_root.py
utils/experiment_utils/: experiment_constants.py  experiment_logger.py  experiment_parser.py  experiment_timer.py
utils/plotting/: plot_log.py
